--- a/code/platformio.ini
+++ b/code/platformio.ini
@@ -14,3 +14,10 @@ board = nucleo_f401re
 framework = stm32cube
 
 build_flags = -DF4
+
+[env:nucleo_f446re]
+platform = ststm32
+board = nucleo_f446re
+framework = stm32cube
+
+build_flags = -DF4
