--- a/code/platformio.ini
+++ b/code/platformio.ini
@@ -1,23 +1,9 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-[env]
-monitor_speed=115200
-
 [env:nucleo_f401re]
 platform = ststm32
 board = nucleo_f401re
 framework = stm32cube
-build_flags = -DF4
 
-[env:nucleo_f446re]
-platform = ststm32
-board = nucleo_f446re
-framework = stm32cube
-build_flags = -DF4
+[platformio]
+include_dir = Inc
+src_dir = Src
+
