nb iot minimal driver OK

--- a/code/stm32pio.ini
+++ b/code/stm32pio.ini
@@ -1,7 +1,7 @@
 [app]
-java_cmd = C:/openjdk-21.0.2_windows-x64_bin/jdk-21.0.2/bin/java.exe
 platformio_cmd = platformio
 cubemx_cmd = C:/Program Files/STMicroelectronics/STM32Cube/STM32CubeMX/STM32CubeMX.exe
+java_cmd = C:/openjdk-21.0.2_windows-x64_bin/jdk-21.0.2/bin/java.exe
 
 [project]
 cubemx_script_content = config load ${ioc_file_absolute_path}
@@ -12,4 +12,8 @@ platformio_ini_patch_content = [platformio]
 	src_dir = Src
 board = nucleo_f401re
 ioc_file = Camera_nocturne.ioc
+cleanup_ignore = Camera_nocturne.ioc
+cleanup_use_git = False
+inspect_ioc = True
+last_error = 
 
